--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
   <div class="wrapper">
 
-    <h1></h1>
-    <!-- SUB HEAD -->
+    <h1>Welcome to Riyadh</h1>
+    <h2></h2>
 
     <div id="content">
 
