--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h2>Where A Traditional Past Meets A Modern Future.</h2>
 
     <div id="content">
-      <img src=transit.jpg>
+      <img src="transit.jpg">
       <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
         
     </div>
