--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     <div id="content">
       <img src="images/transportation/transit.jpg" alt="Modern Transit">
+      <h3>Travel</h3>
       <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
         
     </div>
